--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src = "script.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>X movement left-only</title>
+        <title>Gravity Starter Code</title>
     </head>
     
     <body>
-        <!-- Put your page markup here -->
-        <div class="box" id="blue"></div>
-        <div class="box" id="red"></div>
+        <<img id="pic" src="https://s-media-cache-ak0.pinimg.com/236x/24/2d/2e/242d2e2f40995f6f6ef2cd10a245c196.jpg">
+        <div id="ground"></div>
     </body>
     
 </html>
