--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-        <<img id="pic" src="https://s-media-cache-ak0.pinimg.com/236x/24/2d/2e/242d2e2f40995f6f6ef2cd10a245c196.jpg">
+        <img id="pic" src="https://s-media-cache-ak0.pinimg.com/236x/24/2d/2e/242d2e2f40995f6f6ef2cd10a245c196.jpg">
         <div id="ground"></div>
     </body>
     
